Revamp of info website design, remove unneeded left-over frontend components, intergrate jupyter notebooks into tutorial page.

--- a/src/styles/quasar.variables.sass
+++ b/src/styles/quasar.variables.sass
@@ -1,9 +1,9 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   : #151A1F
-$secondary : #B6C2CE
-$accent    : #263340
+$primary   : #52667A
+$secondary : #E6EAEF
+$accent    : #46B5D1
 
 $dark      : #151A1F
 
